clusters/22222222-2222-4222-8222-222222222222/argocd/foundations/31a3087d-78fa-4ebc-aacd-5f94f304d051.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kp-rc313-matrix-20260822150743-staging
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 31a3087d-78fa-4ebc-aacd-5f94f304d051
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: a612a75d-a15d-413f-89fe-7d45aa321f48
    kuberploy.io/runtime-namespace: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.36
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.36
  annotations:
    argocd.argoproj.io/sync-wave: "-30"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-default-deny
  namespace: kp-rc313-matrix-20260822150743-staging
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 31a3087d-78fa-4ebc-aacd-5f94f304d051
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: a612a75d-a15d-413f-89fe-7d45aa321f48
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-dns-egress
  namespace: kp-rc313-matrix-20260822150743-staging
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 31a3087d-78fa-4ebc-aacd-5f94f304d051
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: a612a75d-a15d-413f-89fe-7d45aa321f48
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
