clusters/22222222-2222-4222-8222-222222222222/argocd/foundations/429776a3-f5c0-41d5-930a-dda608510dee.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kp-rc309-qualification-rc309-staging
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 429776a3-f5c0-41d5-930a-dda608510dee
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 223229ab-9af3-4a77-99f1-eb020600f8c8
    kuberploy.io/runtime-namespace: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.36
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.36
  annotations:
    argocd.argoproj.io/sync-wave: "-30"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-default-deny
  namespace: kp-rc309-qualification-rc309-staging
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 429776a3-f5c0-41d5-930a-dda608510dee
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 223229ab-9af3-4a77-99f1-eb020600f8c8
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-dns-egress
  namespace: kp-rc309-qualification-rc309-staging
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 429776a3-f5c0-41d5-930a-dda608510dee
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 223229ab-9af3-4a77-99f1-eb020600f8c8
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
