clusters/22222222-2222-4222-8222-222222222222/argocd/foundations/4fe4851b-f151-4a90-983a-f7c2ff1dc086.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kp-kuberploy-qualification-development
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 4fe4851b-f151-4a90-983a-f7c2ff1dc086
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 8ef9e114-69cf-45d0-a29c-fe9ce1ce4beb
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.36
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.36
  annotations:
    argocd.argoproj.io/sync-wave: "-30"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-default-deny
  namespace: kp-kuberploy-qualification-development
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 4fe4851b-f151-4a90-983a-f7c2ff1dc086
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 8ef9e114-69cf-45d0-a29c-fe9ce1ce4beb
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-dns-egress
  namespace: kp-kuberploy-qualification-development
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 4fe4851b-f151-4a90-983a-f7c2ff1dc086
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 8ef9e114-69cf-45d0-a29c-fe9ce1ce4beb
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
