clusters/22222222-2222-4222-8222-222222222222/argocd/foundations/50adf6f0-b6d8-4da7-a625-908b3c9edaa7.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kp-rc211-direct-binding-development
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 50adf6f0-b6d8-4da7-a625-908b3c9edaa7
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 6896a1be-0a79-4de5-9045-d4cc02c6737c
    kuberploy.io/runtime-namespace: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.36
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.36
  annotations:
    argocd.argoproj.io/sync-wave: "-30"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-default-deny
  namespace: kp-rc211-direct-binding-development
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 50adf6f0-b6d8-4da7-a625-908b3c9edaa7
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 6896a1be-0a79-4de5-9045-d4cc02c6737c
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-dns-egress
  namespace: kp-rc211-direct-binding-development
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 50adf6f0-b6d8-4da7-a625-908b3c9edaa7
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 6896a1be-0a79-4de5-9045-d4cc02c6737c
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
