clusters/22222222-2222-4222-8222-222222222222/argocd/foundations/55aadf18-50ec-433d-8f61-932b83025aee.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kp-rc156-qualification-protected-qualification
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 55aadf18-50ec-433d-8f61-932b83025aee
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 0bc72c28-936f-4925-83f5-05a51d18f4bb
    kuberploy.io/runtime-namespace: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.36
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.36
  annotations:
    argocd.argoproj.io/sync-wave: "-30"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-default-deny
  namespace: kp-rc156-qualification-protected-qualification
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 55aadf18-50ec-433d-8f61-932b83025aee
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 0bc72c28-936f-4925-83f5-05a51d18f4bb
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-dns-egress
  namespace: kp-rc156-qualification-protected-qualification
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 55aadf18-50ec-433d-8f61-932b83025aee
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 0bc72c28-936f-4925-83f5-05a51d18f4bb
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
