clusters/22222222-2222-4222-8222-222222222222/argocd/foundations/7dbc91aa-8e76-4bc8-9b17-8c0438a6c167.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kp-rc198-registry-1787017220-registry-test-1787017220
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 7dbc91aa-8e76-4bc8-9b17-8c0438a6c167
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: d8bf3519-f152-452b-b6f3-779e43e0f67e
    kuberploy.io/runtime-namespace: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.36
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.36
  annotations:
    argocd.argoproj.io/sync-wave: "-30"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-default-deny
  namespace: kp-rc198-registry-1787017220-registry-test-1787017220
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 7dbc91aa-8e76-4bc8-9b17-8c0438a6c167
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: d8bf3519-f152-452b-b6f3-779e43e0f67e
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-dns-egress
  namespace: kp-rc198-registry-1787017220-registry-test-1787017220
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 7dbc91aa-8e76-4bc8-9b17-8c0438a6c167
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: d8bf3519-f152-452b-b6f3-779e43e0f67e
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
