clusters/22222222-2222-4222-8222-222222222222/argocd/foundations/a52580e2-a11e-49b9-b546-c1a6366576db.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kp-kuberploy-qualification-development
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: a52580e2-a11e-49b9-b546-c1a6366576db
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: ff93cabf-d41a-4ff0-a3de-731f7818a7e0
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.36
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.36
  annotations:
    argocd.argoproj.io/sync-wave: "-30"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-default-deny
  namespace: kp-kuberploy-qualification-development
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: a52580e2-a11e-49b9-b546-c1a6366576db
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: ff93cabf-d41a-4ff0-a3de-731f7818a7e0
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-dns-egress
  namespace: kp-kuberploy-qualification-development
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: a52580e2-a11e-49b9-b546-c1a6366576db
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: ff93cabf-d41a-4ff0-a3de-731f7818a7e0
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
