clusters/22222222-2222-4222-8222-222222222222/argocd/foundations/e91d9df1-0d98-4029-8728-351374f88b0e.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kp-rc149-qualification-production
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: e91d9df1-0d98-4029-8728-351374f88b0e
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 123b5c0d-f472-4f7f-ae7a-19438db4391f
    kuberploy.io/runtime-namespace: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.36
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.36
  annotations:
    argocd.argoproj.io/sync-wave: "-30"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-default-deny
  namespace: kp-rc149-qualification-production
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: e91d9df1-0d98-4029-8728-351374f88b0e
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 123b5c0d-f472-4f7f-ae7a-19438db4391f
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-dns-egress
  namespace: kp-rc149-qualification-production
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: e91d9df1-0d98-4029-8728-351374f88b0e
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 123b5c0d-f472-4f7f-ae7a-19438db4391f
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
