clusters/22222222-2222-4222-8222-222222222222/argocd/foundations/ec22413a-8f97-420f-9800-761fbd98c3b7.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kp-rc193projects-pf-185355-rc193projects-pf-185355-dev
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: ec22413a-8f97-420f-9800-761fbd98c3b7
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 5e4a77f4-5ec0-4669-bab3-3a6a02890153
    kuberploy.io/runtime-namespace: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.36
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.36
  annotations:
    argocd.argoproj.io/sync-wave: "-30"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-default-deny
  namespace: kp-rc193projects-pf-185355-rc193projects-pf-185355-dev
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: ec22413a-8f97-420f-9800-761fbd98c3b7
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 5e4a77f4-5ec0-4669-bab3-3a6a02890153
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-dns-egress
  namespace: kp-rc193projects-pf-185355-rc193projects-pf-185355-dev
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: ec22413a-8f97-420f-9800-761fbd98c3b7
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 5e4a77f4-5ec0-4669-bab3-3a6a02890153
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
