clusters/22222222-2222-4222-8222-222222222222/argocd/foundations/f2953d76-e8b4-4e5c-8f0b-94425cf7686e.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kp-rc211-pr-20260818-rc211-pr-20260818
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: f2953d76-e8b4-4e5c-8f0b-94425cf7686e
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 8f472ef9-6446-4741-8863-498950c0fc5f
    kuberploy.io/runtime-namespace: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.36
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.36
  annotations:
    argocd.argoproj.io/sync-wave: "-30"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-default-deny
  namespace: kp-rc211-pr-20260818-rc211-pr-20260818
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: f2953d76-e8b4-4e5c-8f0b-94425cf7686e
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 8f472ef9-6446-4741-8863-498950c0fc5f
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-dns-egress
  namespace: kp-rc211-pr-20260818-rc211-pr-20260818
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: f2953d76-e8b4-4e5c-8f0b-94425cf7686e
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 8f472ef9-6446-4741-8863-498950c0fc5f
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
