clusters/22222222-2222-4222-8222-222222222222/argocd/foundations/f63087db-cacd-4c2d-8e1a-ed29f8178523.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kp-rc156-isolation-other-other
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: f63087db-cacd-4c2d-8e1a-ed29f8178523
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 57c20a2e-c80a-4821-bbf7-8dc8c37b2de8
    kuberploy.io/runtime-namespace: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.36
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.36
  annotations:
    argocd.argoproj.io/sync-wave: "-30"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-default-deny
  namespace: kp-rc156-isolation-other-other
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: f63087db-cacd-4c2d-8e1a-ed29f8178523
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 57c20a2e-c80a-4821-bbf7-8dc8c37b2de8
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-dns-egress
  namespace: kp-rc156-isolation-other-other
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: f63087db-cacd-4c2d-8e1a-ed29f8178523
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 57c20a2e-c80a-4821-bbf7-8dc8c37b2de8
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
